--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.10.0",
+    "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -40,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-    "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000"
 }
